# beam-poetry-mono

./: README.md
build-deploy/demo-docker/: README.md  config.yaml  dataflow-build.sh  dataflow-run.sh  metadata.json  pyproject.toml  workflows-deploy.sh  workflows-hellofruit.yml
build-deploy/helpers/: argon-test.sh  argon.sh  config-test.yaml  config.yaml
build-deploy/postgres-nfl-tandl/: README.md  config.yaml  header-text.txt  wkf-postgres-nfl-tandl-template.yaml  workflows-deploy.py  workflows-deploy.sh
ddl/bigquery/: team_lookup.sql  venue.sql
eda/postgres-interactive/: postgres.py  requirements.txt
lib/beammeup/: README.md  pyproject.toml
lib/beammeup/beammeup/: fruit.py  kms.py  secret.py
lib/beammeup/tests/: test_fruit.py  test_kms.py  test_secret.py
pipelines/demo/: README.md  basic.py  jdbc.py  pyproject.toml
pipelines/demo-docker/: Dockerfile  hellofruit.py  pyproject.toml  setup.py
pipelines/postgres-nfl-tandl/: README.md  config.yaml  dataflow-generate-run.py  dtf-gcloud-template.sh  header-text.txt  objects-test.csv  objects.csv  pyproject.toml
